fix layout issue in FF

--- a/src/main/webapp/less/90_project.less
+++ b/src/main/webapp/less/90_project.less
@@ -1352,7 +1352,6 @@ th.normal{
     max-width: 100%;
 }
 .navbar-logo{
-    position: relative;
     vertical-align: top;
     display: inline-block;
 }
